--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,27 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
+    <%= user_session_path %>
+    <%= user_session.inspect %>
+
+    <% unless user_signed_in? %>
+
+      <% if user_signed_in? %>
+        <li>
+        <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>        
+        </li>
+      <% else %>
+        <li>
+        <%= link_to('Login', new_user_session_path)  %>  
+        </li>
+        <li>
+        <%= link_to('Signup', new_user_session_path, :id => 'signup-link')  %>  
+        </li>
+
+      <% end %>
+
+    <% end %>
+
     <%= yield %>
 
   </body>
