--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,9 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
-    <%= user_session_path %>
-    <%= user_session.inspect %>
-
-    <% unless user_signed_in? %>
+    <% if user_signed_in? %>
+      <a href='/account'>Account</a>
+    <% else %>
 
       <% if user_signed_in? %>
         <li>
@@ -25,7 +24,7 @@
         <%= link_to('Login', new_user_session_path)  %>  
         </li>
         <li>
-        <%= link_to('Signup', new_user_session_path, :id => 'signup-link')  %>  
+        <%= link_to('Signup', new_user_registration_path, :id => 'signup-link')  %>  
         </li>
 
       <% end %>
