--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,17 +5,14 @@
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
-    <meta name='viewport' content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.1.0/jquery.mobile-1.1.0.min.css" />
-    <script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
-    <script src="http://code.jquery.com/mobile/1.1.0/jquery.mobile-1.1.0.min.js"></script>
+    <meta name='viewport' content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <div data-role='page'>
+    <div>
 
-      <div data-role='header'>Method GTD</div>
+      <div>Method GTD</div>
 
-      <div data-role='content'>
+      <div>
 
         <p class="notice"><%= notice %></p>
         <p class="alert"><%= alert %></p>
