--- a/app/views/layouts/_login_signup.html.erb
+++ b/app/views/layouts/_login_signup.html.erb
@@ -1,9 +1,18 @@
-<div>
-<% if user_signed_in? %>
-  <a href='/account'>Account</a>
-  <%= link_to('Logout', destroy_user_session_path, {:method => :delete}) %>
-<% else %>
-  <%= link_to('Login', new_user_session_path, {:id => 'login-link'})  %>  
-  <%= link_to('Signup', new_user_registration_path, {:id => 'signup-link'})  %>  
-<% end %>
+<div class='navbar'>
+  <div class='navbar-inner'>
+    <div class='container-fluid'>
+      <ul>
+      <a class='brand' href='/'>Method GTD</a>
+      <ul class='nav pull-right'>
+        <% if user_signed_in? %>
+          <!-- <li><strong>Welcome, <%= current_user.username %></strong></li> -->
+          <li><a href='/account'>Account</a></li>
+          <li><%= link_to('Logout', destroy_user_session_path, {:method => :delete}) %></li>
+        <% else %>
+          <li><%= link_to('Login', new_user_session_path, {:id => 'login-link'})  %></li>
+          <li><%= link_to('Signup', new_user_registration_path, {:id => 'signup-link'})  %></li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
 </div>
