--- a/app/views/layouts/_login_signup.html.erb
+++ b/app/views/layouts/_login_signup.html.erb
@@ -1,11 +1,9 @@
-<div class='navbar'>
+<div class='navbar navbar-fixed-top'>
   <div class='navbar-inner'>
-    <div class='container-fluid'>
-      <ul>
+    <div class='container'>
       <a class='brand' href='/'>Method GTD</a>
       <ul class='nav pull-right'>
         <% if user_signed_in? %>
-          <!-- <li><strong>Welcome, <%= current_user.username %></strong></li> -->
           <li><a href='/account'>Account</a></li>
           <li><%= link_to('Logout', destroy_user_session_path, {:method => :delete}) %></li>
         <% else %>
