--- a/app/views/frontpage/index.html.erb
+++ b/app/views/frontpage/index.html.erb
@@ -24,13 +24,29 @@
         </tr>
       </thead>
       <% current_user.active_todos.each do |todo| %>
-        <tr>
+        <tr id='todo-row-<%= todo.id %>'>
           <td class='span1'><input id='todo-complete-<%= todo.id %>' class='complete-checkbox' type='checkbox' name='todos[<%= todo.id %>][complete]'/></td>
           <td class='span6'><span id='todo-<%= todo.id %>'><%= todo.description %></span></td>
-          <td class='span1'><a href='#'>[x]</a></td>
+          <td class='span1'><a id='todo-delete-<%= todo.id %>' class='delete-todo-link' href='#'>[x]</a></td>
         </tr>
       <% end %>
     </table>
+  </div>
+
+  <div class='modal' id='delete-todo-modal' style='display:none'>
+     <div class="modal-header">
+      <button class="close" data-dismiss="modal">×</button>
+      <h3>Delete Todo?</h3>
+    </div>
+    <div class="modal-body">
+      <p>Are you sure you want to delete this todo?</p>
+    </div>
+
+    <div class="modal-footer">
+      <a id='close-delete-todo-modal' href="#" class="btn">Close</a>
+      <a id='delete-todo-button' href="#" class="btn btn-primary">Delete</a>
+    </div>
+
   </div>
 
 <% end %>
