--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,30 @@
   </head>
   <body>
 
-    <div class='hidden-phone' style='padding-bottom: 17px; margin: 18px 0;'>
-      &nbsp;
-    </div>
+    <div class='navbar navbar-fixed-top'>
+      <div class='navbar-inner'>
+        <div class='container'>
+          <% if current_user %>
+            <ul class='nav'>
+              <li>
+              <button id='add-todo-button' class='btn'>
+                <span class='icon-plus'></span>
+                Todo
+              </button>
+              </li>
+            </ul>
 
-    <%= render 'layouts/login_signup' %>
+            <%= form_for Todo.new, {:controller => 'todo', :action => 'create', :html => {:class=> 'navbar-search horizontal-mobile'} } do |f| %>
+              <div style="margin-bottom:0">
+                <%= f.text_field :description, :div => false, :class => 'horizontal-mobile' %>
+              </div>
+            <% end %>
+          <% else %>
+            <span class='brand'>Welcome!</span>
+          <% end %>
+        </div>
+      </div>
+    </div>
 
     <div class='container'>
       <% unless flash.empty? %>
@@ -34,5 +53,24 @@
       </div>
 
     </div> <!-- .container -->
+
+    <div class='navbar navbar-fixed-bottom'>
+      <div class='navbar-inner'>
+        <div class='container'>
+          <a class='brand' href='/'>Method GTD</a>
+
+          <ul class='nav pull-right'>
+            <% if user_signed_in? %>
+              <li><a href='/account'>Account</a></li>
+              <li><%= link_to('Logout', destroy_user_session_path, {:method => :delete}) %></li>
+            <% else %>
+              <li><%= link_to('Login', new_user_session_path, {:id => 'login-link'})  %></li>
+              <li><%= link_to('Signup', new_user_registration_path, {:id => 'signup-link'})  %></li>
+            <% end %>
+          </ul>
+
+        </div>
+      </div>
+    </div>
   </body>
 </html>
