--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,11 +5,11 @@
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
-    <meta name='viewport' content="width=device-width, initial-scale=1.0">
+    <meta name='viewport' content="width=device-width, initial-scale=1.0; maximum-scale=1.0; user-scalable=0">
   </head>
   <body>
 
-    <div class='navbar navbar-top'>
+    <div class='navbar navbar-fixed-top'>
       <div class='navbar-inner'>
         <div class='container'>
           <% if current_user %>
@@ -56,7 +56,7 @@
     </div> <!-- .container -->
   </div>
 
-    <div class='navbar navbar-bottom'>
+    <div class='navbar navbar-fixed-bottom'>
       <div class='navbar-inner'>
         <div class='container'>
           <a class='brand' href='/'>Method GTD</a>
