--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
-    <meta name='viewport' content="width=device-width, initial-scale=1.0; maximum-scale=1.0; user-scalable=0">
+    <meta name='viewport' content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   </head>
   <body>
 
@@ -27,6 +27,13 @@
                 <%= f.text_field :description, :div => false, :class => 'horizontal-mobile' %>
               </div>
             <% end %>
+
+            <ul class='nav'>
+            <li>
+              <div id='spinner' style='width: 50px; margin-top: 25px; float:left; margin-right: 10px'></div>
+            </li>
+            </ul>
+
           <% else %>
             <span class='brand'>Welcome!</span>
           <% end %>
@@ -60,8 +67,6 @@
       <div class='navbar-inner'>
         <div class='container'>
           <a class='brand' href='/'>Method GTD</a>
-
-          <div id='spinner'>
 
           <ul class='nav pull-right'>
             <% if user_signed_in? %>
