Added parsing for projects and contexts!

--- a/app/views/todos/_todolist.html.erb
+++ b/app/views/todos/_todolist.html.erb
@@ -9,7 +9,7 @@
   <% todos.each do |todo| %>
     <tr id='todo-row-<%= todo.id %>'>
       <td class='span1'><input id='todo-complete-<%= todo.id %>' class='complete-checkbox' type='checkbox' name='todos[<%= todo.id %>][complete]'/></td>
-      <td class='span6'><span id='todo-<%= todo.id %>'><%= todo.description %></span></td>
+      <td class='span6'><span id='todo-<%= todo.id %>'><%= parse_todo_description(todo.description).html_safe %></span></td>
       <td class='span1'><a id='todo-delete-<%= todo.id %>' class='delete-todo-link' href='#'>[x]</a></td>
     </tr>
   <% end %>
