--- a/app/views/todos/_todolist.html.erb
+++ b/app/views/todos/_todolist.html.erb
@@ -1,16 +1,16 @@
-<table class='table-bordered table-striped span8'>
+<table class='table-bordered table-striped' style='width: 100%'>
   <thead>
     <tr>
-      <th class='span1'>Complete</th>
-      <th class='span6'>Task</th>
-      <th class='span1'>Delete</th>
+      <th style='width: 3%'>Complete</th>
+      <th>Task</th>
+      <th style='width: 3%'>Delete</th>
     </tr>
   </thead>
   <% todos.each do |todo| %>
     <tr id='todo-row-<%= todo.id %>'>
-      <td class='span1'><input id='todo-complete-<%= todo.id %>' class='complete-checkbox' type='checkbox' name='todos[<%= todo.id %>][complete]'/></td>
-      <td class='span6'><span id='todo-<%= todo.id %>'><%= parse_todo_description(todo.description).html_safe %></span></td>
-      <td class='span1'><a id='todo-delete-<%= todo.id %>' class='delete-todo-link' href='#'>[x]</a></td>
+      <td><input id='todo-complete-<%= todo.id %>' class='complete-checkbox' type='checkbox' name='todos[<%= todo.id %>][complete]'/></td>
+      <td><span id='todo-<%= todo.id %>'><%= parse_todo_description(todo.description).html_safe %></span></td>
+      <td><a id='todo-delete-<%= todo.id %>' class='delete-todo-link' href='#'>[x]</a></td>
     </tr>
   <% end %>
 </table>
