--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MethodGtd</title>
+    <title>Method Todo</title>
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
@@ -68,7 +68,7 @@
     <div class='navbar navbar-fixed-bottom'>
       <div class='navbar-inner'>
         <div class='container'>
-          <a class='brand' href='/'>Method GTD</a>
+          <a class='brand' href='/'>Method Todo</a>
 
           <ul class='nav pull-right'>
             <% if user_signed_in? %>
