Ability to toggle back and forth completed todo

--- a/app/views/frontpage/index.html.erb
+++ b/app/views/frontpage/index.html.erb
@@ -12,7 +12,7 @@
 
 <script type='text/template' id='todo-table-row-template'>
 <tr id='todo-row-<%%= todo.id %>'>
-  <td><input id='todo-complete-<%%= todo.id %>' class='complete-checkbox' type='checkbox' name='todos[<%%= todo.id %>][complete]'/></td>
+  <td><input id='todo-complete-<%%= todo.id %>' <%%= todo.completed ? "checked" : "" %> class='complete-checkbox' type='checkbox' name='todos[<%%= todo.id %>][complete]'/></td>
   <td><span id='todo-<%%= todo.id %>'><%%= todo.description%></span></td>
   <td><a id='todo-delete-<%%= todo.id %>' class='delete-todo-link' href='#'>[x]</a></td>
 </tr>
