--- a/app/views/todos/_todolist.html.erb
+++ b/app/views/todos/_todolist.html.erb
@@ -3,6 +3,7 @@
     <tr>
       <th style='width: 3%'>Complete</th>
       <th>Task</th>
+      <th style='width: 3%'>Edit</th>
       <th style='width: 3%'>Delete</th>
     </tr>
   </thead>
