--- a/app/views/todos/_todolist.html.erb
+++ b/app/views/todos/_todolist.html.erb
@@ -1,10 +1,9 @@
 <table class='table-bordered table-striped todo-list-table' style='width: 100%'>
   <thead>
     <tr>
-      <th style='width: 3%'><span class='icon-ok-sign'></span></th>
+      <th style='width: 3%'><span class='icon-check'></span></th>
       <th>Task</th>
       <th style='width: 3%'>Edit</th>
-      <th style='width: 3%'>Delete</th>
     </tr>
   </thead>
   <tbody>
