Showing the completed date on todos in completed tab

--- a/app/views/todos/_todolist.html.erb
+++ b/app/views/todos/_todolist.html.erb
@@ -3,7 +3,7 @@
     <tr>
       <th style='width: 3%'><span class='icon-check'></span></th>
       <th>Task</th>
-      <th style='width: 3%'>Edit</th>
+      <th style='width: 40px'>Edit</th>
     </tr>
   </thead>
   <tbody>
