--- a/app/views/frontpage/index.html.erb
+++ b/app/views/frontpage/index.html.erb
@@ -77,6 +77,7 @@
 </div> <!-- tabbable -->
 
 <div class='modal' id='delete-todo-modal' style='display:none'>
+  <span id='delete-todo-id' style='display:none'></span>
   <div class="modal-header">
     <button class="close" data-dismiss="modal">×</button>
     <h3>Delete Todo?</h3>
