Document code, because it's the right thing to do

--- a/app/views/frontpage/_help_box.html.erb
+++ b/app/views/frontpage/_help_box.html.erb
@@ -2,11 +2,12 @@
 
 <div id='help-box' class='well' style='<%= show_help ? '' : 'display:none' %>'>
   <h3>How do it work?</h3>
-  <div>Use symbols in the description of your todo to organize them for later sorting using the dropdowns below:</div>
+  <div>Use symbols in the description of your todo to organize them for later sorting:</div>
   <ul style='list-style:none'>
     <li><strong>@</strong> &mdash; Assign the todo to a Context, e.g., <strong>@home</strong> or <strong>@work</strong></li>
     <li><strong>+</strong> &mdash; Assign the todo to a Project, e.g., <strong>+research-paper</strong></li>
     <li><strong>#</strong> &mdash; Assign the todo to a Tag, e.g., <strong>#purchases</strong></li>
+    <li>Click a <a class='label'>badge</a> to filter the list or use the dropdowns below</li>
   </ul>
 
   <a id='dismiss-help' href='#'>Dismiss this</a>
